# uppsala-temperature

./: .gitignore  README.md  model_config.json  notes.md  pyproject.toml  requirements.txt
data/uppsala_tm_1722-2022/: uppsala_tm_1722-2022.txt
docs/: requirements.md
models/: config_0.yaml  config_1.yaml
notebooks/: Untitled.ipynb  Untitled1.ipynb  ar1-v2.ipynb  ar2-v0.ipynb  model_result.nc  modeling.ipynb  spectral_analysis.ipynb  statsmodels.ipynb
outputs/ar1-v3/: idata_ar.json  idata_preds.json  summary.csv
report/: latexmkrc  refs.bib  report.aux  report.bbl  report.blg  report.fdb_latexmk  report.fls  report.out  report.tex
src/: ar1-v0.ipynb  ar1-v0.py  ar1-v1.ipynb  ar1-v1.py  ar1-v2.py  ar1-v3.py  ar2-v0.py  create_stats.py  generate_model_config.py  run_model.py  run_model_v1.py
src/models/: config.yaml  config_0.yaml  config_1.yaml  config_2.yaml
src/shastat/: cli.py  data.py  model.py  model.py.bak  utils.py
src/statspace/: __main__.py  cli.py  data.py  model.py
src/statspace/cli/: cli.py  data.py  structural.py
src/statspace/data/: __init__.py  data.py
src/statspace/models/: __init__.py  structural.py  utils.py
tests/: test_model.py
