[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "statsmodels == 0.14.4",
  "pandas == 2.2.3",
  "numpy == 2.2.5",
  "scipy == 1.15.3",
  "matplotlib == 3.10.1",
  "typer == 0.16.0",
  "pytest == 8.4.0",
]
name = "uppsala-temperature"
readme = "README.md"
dynamic = ["version"]
[project.scripts]
statspace = "statspace.cli:app"
