[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
  "statsmodels == 0.14.4",
  "pandas == 2.2.3",
  "numpy == 2.2.5",
  "scipy == 1.15.3",
  "dash == 3.0.4",
  "plotly == 6.1.2",
  "typer == 0.16.0",
  "pytest == 8.4.0",
  "lxml == 5.4.0",
  "dash-dangerously-set-inner-html == 0.0.2",
]
name = "uppsala-temperature"
readme = "README.md"
dynamic = ["version"]
[project.scripts]
statspace = "statspace.cli:app"
